2025-07-01T01:43:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15987697017 # 691
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-01
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 1015 1495 / 1026 1506
* notice: next accum: outdated-unq outdated-all / unq all: 1015 1495 / 1027 1507
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-30]

2025-06-30T01:38:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15961861773 # 690
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-30
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 1015 1495 / 1025 1505
* notice: next accum: outdated-unq outdated-all / unq all: 1015 1495 / 1026 1506
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-29]

2025-06-29T01:41:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15950255249 # 689
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-29
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 1014 1494 / 1024 1504
* notice: next accum: outdated-unq outdated-all / unq all: 1015 1495 / 1025 1505
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-14] / [2025-06-28]

2025-06-28T01:22:30Z: