@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-01T01:43:20Z",
-  "count_outdated" : 1495,
-  "uniques_outdated" : 1015,
-  "count" : 1507,
-  "uniques" : 1027,
+  "timestamp" : "2025-07-02T01:25:00Z",
+  "count_outdated" : 1496,
+  "uniques_outdated" : 1016,
+  "count" : 1509,
+  "uniques" : 1029,
   "clones" : [
-    {
-      "timestamp": "2025-06-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-19T00:00:00Z",
       "count": 1,
@@ -112,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
