@@ -1,12 +1,7 @@
 {
-  "count": 12,
-  "uniques": 3,
+  "count": 13,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2025-06-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-19T00:00:00Z",
       "count": 1,
@@ -61,6 +56,11 @@
       "timestamp": "2025-06-30T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-01T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
